--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,10 @@ logs/
 
 # --- Project-specific  ---
 # Knowledge base & derived indexes
-kb/
+kb/**
+!kb/
+!kb/**/
+!kb/**/.gitkeep
 models/
 models.faiss/
 models/*/
